# project-management

./: Data\app.db  Program.cs  Projects.csproj  README.md
Components/: App.razor  Routes.razor  _Imports.razor
Components/Account/: IdentityComponentsEndpointRouteBuilderExtensions.cs  IdentityNoOpEmailSender.cs  IdentityRedirectManager.cs  IdentityRevalidatingAuthenticationStateProvider.cs  IdentityUserAccessor.cs
Components/Layout/: MainLayout.razor  NavMenu.razor
Data/: ApplicationDbContext.cs  ApplicationSeed.cs  ApplicationUser.cs
Data/Migrations/: 20250417161141_Projects.Designer.cs  20250417161141_Projects.cs  20250418154019_DefaultDate.cs  ApplicationDbContextModelSnapshot.cs
Models/: Assignment.cs  BaseEntity.cs  Gain.cs  Project.cs  Staff.cs
blazor-server/: .gitignore  Data\app.db  Projects.sln
blazor-server/Data/: ApplicationUser.cs
blazor-server/Models/: Assignment.cs  BaseEntity.cs  Expense.cs  Gain.cs  Project.cs  Staff.cs
blazor-server/Properties/: launchSettings.json
go-gin/: go.mod  go.sum  main.go
go-gin/ent/: assignment.go  assignment_create.go  assignment_delete.go  assignment_query.go  assignment_update.go  client.go  ent.go  mutation.go  project.go  project_create.go  project_delete.go  project_query.go  project_update.go  runtime.go  statement.go  statement_create.go  statement_delete.go  statement_query.go  statement_update.go  tx.go  user.go  user_create.go  user_delete.go  user_query.go  user_update.go
rust-actix/: Cargo.toml
rust-actix/sql/: add_user.sql  get_users.sql  schema.sql
rust-actix/src/: models.rs
(+97 files in other folders)
