[package]
name = "rust-actix"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
confik = "0.11"
deadpool-postgres = { version = "0.12", features = ["serde"] }
derive_more = { version = "2", features = ["display", "error", "from"] }
dotenvy = "0.15.7"
serde = "1.0.219"
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = "0.7.6"
